# LibreChat

./: .env.example  .gitignore  DEPLOY_PRODUCTION.md  PORTKEY_FIX_INSTRUCTIONS.md  PORTKEY_MODERN_CONFIG.md  START_DEVCONTAINER.md  deploy-compose.yml  docker-compose.yml  librechat.example.yaml  librechat.yaml  librechat.yml  package-lock.json  package.json  portkey-response-headers-2025-11-19T08-17-33-058Z.json  portkey-response-headers-2025-11-19T08-28-41-751Z.json  portkey-response-headers-2025-11-19T08-37-14-832Z.json  portkey-response-headers-2025-11-19T08-39-00-332Z.json  portkey-response-parsed-2025-11-19T08-28-41-751Z.json  portkey-response-parsed-2025-11-19T08-39-00-332Z.json  portkey-response-raw-2025-11-19T08-17-33-058Z.txt  portkey-response-raw-2025-11-19T08-39-00-332Z.txt  restart-piper.sh  test-portkey-auth-debug.js  test-portkey-config-check.js  test-portkey-detailed-error.js  test-portkey-fixed.js  test-portkey-image-gen.js  test-portkey-trace.js
.devcontainer/: Dockerfile  code-interpreter-proxy.md  (+2 more)
code-interpreter-proxy/: Dockerfile  README.md  pyproject.toml
code-interpreter-proxy/src/: main.py
code-interpreter-proxy/src/api/: __init__.py  compat.py  files.py  health.py  runs.py  sessions.py
code-interpreter-proxy/src/config/: __init__.py
code-interpreter-proxy/src/models/: files.py  runs.py  sessions.py
code-interpreter-proxy/src/sandbox/: __init__.py  manager.py
code-interpreter-proxy/src/utils/: auth.py  docker_cleanup.py  logging.py  storage.py
ocr-service/: .dockerignore  Dockerfile  env.example  pyproject.toml
ocr-service/src/: __init__.py  config.py  main.py  routes.py
ocr-service/src/engines/: __init__.py  base.py  registry.py  tesseract_engine.py
ocr-service/src/middleware/: __init__.py  auth.py
ocr-service/src/models/: __init__.py  api_models.py
ocr-service/src/storage/: __init__.py  base.py  memory_storage.py  registry.py
(+58 files in other folders)
